--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Phishtopia</title>
+</head>
+<body>
 <h1>Welcome to Phishtopia! (Coming Soon)</h1>
 <h2>Respect and Enjoy the Peace</h2>
-<p><a><img src="./assets/images/peace.jpg" alt="Brother Day, Empire from Foundation TV series holding his hand up in a confident peace sign."></a></p>
+<img src="./assets/images/peace.jpg" alt="Brother Day, Empire from Foundation TV series holding his hand up in a confident peace sign.">
 <p><a href="./public/contact.html">Contact Me</a></p>
+</body>
+</html>
