Fixed Image Size

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Welcome to Phishtopia! (Coming Soon)</h1>
 <h2>Respect and Enjoy the Peace</h2>
-<img src="./assets/images/peace.jpg" alt="Brother Day, Empire from Foundation TV series holding his hand up in a confident peace sign.">
+<img src="./assets/images/peace.jpg" height=200 alt="Brother Day, Empire from Foundation TV series holding his hand up in a confident peace sign.">
 <h3><a href="https://phishyone.github.io/Fullstack-Course/">Check Out My Fullstack Course Progress</a></h3>
 <p><a href="./public/contact.html">Contact Me</a></p>
 </body>
