Get Well Mamma Ash

--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <title>Phishtopia</title>
 </head>
 <body>
+
+<!--
 <h1>Welcome to Phishtopia! (Coming Soon)</h1>
 <h2>Respect and Enjoy the Peace</h2>
 <img src="./assets/images/peace.jpg" height=200 alt="Brother Day, Empire from Foundation TV series holding his hand up in a confident peace sign.">
+-->
+
+<h1 style=color:purple>Get Well Wishes for Ms. Davies</h1>
+<h2 style=color:pink>Thinking of You and Sending Love</h2>
+<img src="./assets/images/getwell.jpeg" height=300 alt="A get well soon card and flowers">
+<hr />
 <h3><a href="https://phishyone.github.io/Fullstack-Course/">Check Out My Fullstack Course Progress</a></h3>
 <p><a href="./public/contact.html">Contact Me</a></p>
 </body>
