--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 -->
 
 <h1 style=color:purple>Get Well Wishes for Ms. Davies</h1>
-<h2 style=color:pink>Thinking of You and Sending Love</h2>
-<img src="./assets/images/getwell.jpeg" height=300 alt="A get well soon card and flowers">
+<h2 style=color:pink>Thinking of You and Sending Love ~Phish</h2>
+<img src="./assets/images/getwell.jpeg" height=340 alt="A get well soon card and flowers">
 <hr />
 <h3><a href="https://phishyone.github.io/Fullstack-Course/">Check Out My Fullstack Course Progress</a></h3>
 <p><a href="./public/contact.html">Contact Me</a></p>
