--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phishtopia</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-</head>
 <body>
-    <video id="bg-video" autoplay loop muted>
-        <source src="./assets/images/fishBG.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+  <div class="video-container">
+    <video id="background-video" autoplay loop muted>
+      <source src="./assets/images/fishBG.mp4" type="video/mp4">
+      Your browser does not support the video tag.
     </video>
-        <div class="content">
-            <h1>Welcome to Phishtopia! (Coming Soon)</h1>
-            <h2>Respect and Enjoy the Peace</h2>
-            <img src="./assets/images/peace.jpg" height=200 alt="Brother Day, Empire from Foundation TV series holding his hand up in a confident peace sign.">
-            <hr />
-            <h3><a href="https://phishyone.github.io/Fullstack-Course/">
-                Check Out My Fullstack Course Progress</a></h3>
-            <p><a href="./public/contact.html">Contact Me</a></p>
-        </div>
+
+    <div class="content">
+      <h1>Welcome to Phishtopia! (Coming Soon)</h1>
+      <h2>Respect and Enjoy the Peace</h2>
+      <img src="./assets/images/peace.jpg" height="200" alt="Brother Day peace sign">
+      <hr />
+      <h3><a href="https://phishyone.github.io/Fullstack-Course/">Check Out My Fullstack Course Progress</a></h3>                                                                                  
+      <p><a href="./public/contact.html">Contact Me</a></p>
+    </div>
+  </div>
 </body>
-</html>
