--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Phishtopia</title>
+  <link rel="stylesheet" href="./styles.css" />
+</head>
 <body>
-  <div class="video-container">
-    <video id="background-video" autoplay loop muted>
-      <source src="./assets/images/fishBG.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
 
-    <div class="content">
-      <h1>Welcome to Phishtopia! (Coming Soon)</h1>
-      <h2>Respect and Enjoy the Peace</h2>
-      <img src="./assets/images/peace.jpg" height="200" alt="Brother Day peace sign">
-      <hr />
-      <h3><a href="https://phishyone.github.io/Fullstack-Course/">Check Out My Fullstack Course Progress</a></h3>                                                                                  
-      <p><a href="./public/contact.html">Contact Me</a></p>
-    </div>
+  <video id="background-video" autoplay loop muted>
+    <source src="./assets/images/fishBG.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <div class="content">
+    <h1>Welcome to Phishtopia! (Coming Soon)</h1>
+    <h2>Respect and Enjoy the Peace</h2>
+    <img src="./assets/images/peace.jpg" alt="Brother Day peace sign">
+    <hr />
+    <h3><a href="https://phishyone.github.io/Fullstack-Course/">Check Out My Fullstack Course Progress</a></h3>                                                                                  
+    <p><a href="./public/contact.html">Contact Me</a></p>
   </div>
+
 </body>
+</html>
