Moved contact me and progress as footer class to the bottom

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <h1>Welcome to Phishtopia! (Coming Soon)</h1>
     <h2>Respect and Enjoy the Peace</h2>
     <img src="./assets/images/peace.jpg" alt="Brother Day peace sign">
+  </div>
+
+  <div class="footer">
     <hr />
-    <h3><a href="https://phishyone.github.io/Fullstack-Course/">Check Out My Fullstack Course Progress</a></h3>                                                                                  
+    <h3><a href="https://phishyone.github.io/Fullstack-Course/">Check Out My Fullstack Course Progress</a></h3>
+    <br><p>7  out of 44 Chapters Complete!</p>
   <br />
     <p><a href="./public/contact.html">Contact Me</a></p>
   </div>
