--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta property="og:title" content="Phishtopia">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://phistopia.com">
+  <meta property="og:site_name" content="Phishtopia">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:image" content="./assets/images/phishLogo.png">
+  <meta property="og:description" content="A peaceful website showcasing artistic and technological projects of prisoners.">
+  <meta name="description" content="A peaceful website showcasing artistic and technological projects of prisoners.">
+  <meta name="keywords" content="Phishtopia, Peace, Art, Technology, Prisoners, Projects">
+  <meta name="author" content="PhishyOne">
+  <meta name="theme-color" content="#0000FF">
+  <link rel="icon" href="./assets/images/phishLogo.png" type="image/png">
+  <link rel="apple-touch-icon" href="./assets/images/phishLogo.png">
   <title>Phishtopia</title>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-
   <video id="background-video" autoplay loop muted>
     <source src="./assets/images/fishBG.mp4" type="video/mp4">
     Your browser does not support the video tag.
