Added Animation Styling and Message for Ash's Recovery

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <link rel="icon" href="./assets/images/phishLogo.png" type="image/png">
   <link rel="apple-touch-icon" href="./assets/images/phishLogo.png">
   <title>Phishtopia</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
   <video id="background-video" autoplay loop muted>
@@ -30,6 +31,8 @@
     <br>
     <h2>Respect and Enjoy the Peace</h2>
     <img src="./assets/images/peace.jpg" alt="Brother Day peace sign">
+    <div class="animate__animated animate__bounce animate__infinite">Wishing You a Speedy Recovery Ash!</div>
+
   </div>
 
   <div class="footer">
