Added heart animation and sunflower image Commented out brother day peace sign

--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@
   <div class="content">
     <h1>Welcome to Phishtopia! (Coming Soon)</h1>
     <br>
-    <h2>Respect and Enjoy the Peace</h2>
+    <!-- <h2>Respect and Enjoy the Peace</h2>
     <img src="./assets/images/peace.jpg" alt="Brother Day peace sign">
+     -->
     <div class="animate__animated animate__bounce animate__infinite">Wishing You a Speedy Recovery Ash!</div>
-
+    <div class="heart-container">
+        <div class="heart"></div>
+        
+    </div>
+    <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3Q0NXpqa2Zqcmc5OTdwcjUydTluZTVidHZhZG9pY3NjeDdpZG94NCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/0UVw5Pvzm0Bh7be6Vi/giphy.gif" alt="Sunflower Animation">
   </div>
 
   <div class="footer">
