--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:url" content="https://phistopia.com">
   <meta property="og:site_name" content="Phishtopia">
   <meta property="og:locale" content="en_US">
-  <meta property="og:image" content="./assets/images/phishLogo.png">
+  <meta property="og:image" content="https://phishtopia.com/assets/images/phishLogo.png">
   <meta property="og:description" content="A peaceful website showcasing artistic and technological projects of prisoners.">
   <meta name="description" content="A peaceful website showcasing artistic and technological projects of prisoners.">
   <meta name="keywords" content="Phishtopia, Peace, Art, Technology, Prisoners, Projects">
