--- a/public/contact.html
+++ b/public/contact.html
@@ -3,3 +3,4 @@
 <p><a href="https://github.com/PhishyOne">Github: PhishyOne</a></p>
 <p><a href="https://discordapp.com/users/1061044601164677131">Discord: phishy_one</a></p>
 <p><a href="https://t.me/PhishyOne">Telegram: Sir Phishington</a></p>
+<p><a href="./j.html">J</a></p>
