--- a/index.html
+++ b/index.html
@@ -1,53 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta property="og:title" content="Phishtopia">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://phistopia.com">
-  <meta property="og:site_name" content="Phishtopia">
-  <meta property="og:locale" content="en_US">
-  <meta property="og:image" content="https://phishtopia.com/assets/images/phishLogo.png">
-  <meta property="og:description" content="A peaceful website showcasing artistic and technological projects of prisoners.">
-  <meta name="description" content="A peaceful website showcasing artistic and technological projects of prisoners.">
-  <meta name="keywords" content="Phishtopia, Peace, Art, Technology, Prisoners, Projects">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Phishtopia - Home of the improbable.">
+  <meta name="keywords"
+    content="Phishtopia, projects, artwork, software, engineering, food, community, prison, peace, sharing, showcase">
   <meta name="author" content="PhishyOne">
-  <meta name="theme-color" content="#0000FF">
-  <link rel="icon" href="./assets/images/phishLogo.png" type="image/png">
-  <link rel="apple-touch-icon" href="./assets/images/phishLogo.png">
+  <meta name="theme-color" content="#05899E">
   <title>Phishtopia</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <link rel="stylesheet" href="./styles.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Pompiere&display=swap"
+    rel="stylesheet">
+  <link rel="shortcut icon" href="./images/phishLogo.png" type="image/png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/phishLogo.png">
+  <link rel="icon" href="./images/phishLogo.png" type="image/png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-  <video id="background-video" autoplay loop muted>
-    <source src="./assets/images/fishBG.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <!-- Nav Bar -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary gradient-background">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="https://phishtopia.com"><img src="./images/phishLogo.png" alt="Phishtopia"
+          class="logo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">StoreCalc Online</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Projects Showcase
+            </a>
+            <ul class="dropdown-menu gradient-background">
+              <li><a class="dropdown-item" href="#">Software</a></li>
+              <li><a class="dropdown-item" href="#">Mechanical/Electrical Engineering</a></li>
+              <li><a class="dropdown-item" href="#">Artwork</a></li>
+              <li><a class="dropdown-item" href="#">Food</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Got a Question?</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
 
-  <div class="content">
-    <h1>Welcome to Phishtopia! (Coming Soon)</h1>
-    <br>
-    <!-- <h2>Respect and Enjoy the Peace</h2>
-    <img src="./assets/images/peace.jpg" alt="Brother Day peace sign">
-     -->
-    <div class="animate__animated animate__bounce animate__infinite">Wishing You a Speedy Recovery Ash!</div>
-    <div class="heart-container">
-        <div class="heart"></div>
-        
     </div>
-    <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3Q0NXpqa2Zqcmc5OTdwcjUydTluZTVidHZhZG9pY3NjeDdpZG94NCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/0UVw5Pvzm0Bh7be6Vi/giphy.gif" alt="Sunflower Animation">
-  </div>
+  </nav>
 
-  <div class="footer">
-    <hr />
-    <h3><a href="https://phishyone.github.io/Fullstack-Course/">Check Out My Fullstack Course Progress</a></h3>
-    <br>
-    <p>12 out of 44 Chapters Complete!</p>
-    <br />
-    <p><a href="./public/contact.html">Contact Me</a></p>
-  </div>
+  <!-- Main Content -->
+  <main class="main-grid">
+    <!-- Hero Section -->
+    <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5 mb-5">
+      <h1 class="gradient-text">phishtopia v1.0</h1>
+      <p>Home of the improbable.</p>
+    </section>
+    <!-- StoreCalc Online Section -->
+    <section class="storecalc-section dark-bg rounded-3 p-5">
+      <h2>StoreCalc Online (Egg Stage)</h2>
+      <p>Coming Soon! StoreCalc helps prisoners total up their commissary items and keep records of their purchases.
+      </p>
+      <button class="btn btn-outline-light gradient-text button">Don't Click Here</button>
+    </section>
+    <!-- Projects Section -->
+    <section class="projects-section orange-bg border-success rounded-3 p-5">
+      <h2>Projects</h2>
+      <p>phishtopia aims to create a peaceful atmosphere where projects and artwork of the underground can be
+        displayed for the world to see. This is a place where finished products can shine.</p>
+      <button class="btn btn-outline-dark gradient-text button">Select</button>
+    </section>
+    <!-- Carousel Section -->
+    <section class="carousel-section">
+      <div id="carousel-captions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carousel-captions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type=" button" data-bs-target="#carousel-captions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type=" button" data-bs-target="#carousel-captions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type=" button" data-bs-target="#carousel-captions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        </div>
+        <div class="carousel-inner rounded-3">
+          <div class="carousel-item active">
+            <img src="./images/heart.jpg" alt="Color pencil heart">
+              <div class="carousel-caption">
+                <h5>Artwork</h5>
+                <p>Amazing work from talented people.</p>
+              </div>
+           </div>
+          <div class="carousel-item">
+            <img src="./images/spaghetti.jpg" alt="Yummy spaghetti">
+            <div class="carousel-caption">
+              <h5>Food</h5>
+              <p>Making mouth-watering food from scratch with next to nothing.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/tattoo.jpg" alt="Jerry-rigged tattoo gun">
+            <div class="carousel-caption">
+              <h5>Engineering</h5>
+              <p>You've never seen ingenuity quite like this.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/storecalc.png" alt="Preview of StoreCalc for Android">
+            <div class="carousel-caption">
+              <h5>Software</h5>
+              <p>Building productivity.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+  </main>
+  <!-- Footer -->
+  <section id="footer">
+    <div class="gradient-background justify-content-center">
+      <footer class="py-3 text-center">
+        <ul class="nav justify-content-center mb-2 footer-links">
+          <li class="nav-item"><a href="https://phishtopia.com" class="nav-link px-4 text-body-secondary">Home</a>
+          </li>
+          <li class="nav-item"><a href="https://phishyone.github.io/Fullstack-Course/" class="nav-link px-4">My Course
+              Progress</a></li>
+          <li class="nav-item"><a href="https://phishtopia.com/public/contact.html" class="nav-link px-4">Contact Me</a>
+          </li>
+        </ul>
+        <a href="https://phishtopia.com"><img src="./images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
+        <a href="https://phishtopia.com">
+          <p class="gradient-text text-center">©2025 Phishtopia</p>
+        </a>
+      </footer>
+    </div>
+  </section>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
