--- a/public/j.html
+++ b/public/j.html
@@ -1,7 +1,7 @@
 <h1>Bad Bitch</h1>
 <h2>Please Enjoy (but don't share) This Video</h2>
 <video width="640" height="480" controls>
-  <source src="../assets/videos/bad-bitch.mp4" type="video/mp4">
+  <source src="../videos/bad-bitch.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 <h2>Lyrics:</h2>
