Added meta data

--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Phishtopia - Home of the improbable.">
+  <meta name="description" content="Home of the Improbable.">
   <meta name="keywords"
     content="Phishtopia, projects, artwork, software, engineering, food, community, prison, peace, sharing, showcase">
   <meta name="author" content="PhishyOne">
   <meta name="theme-color" content="#05899E">
+  <meta property="og:title" content="Phishtopia">
+  <meta property="og:description" content="Home of the Improbable.">
+  <meta property="og:image" content="https://phishtopia.com/images/phishLogo.png">
+  <meta property="og:url" content="https://phishtopia.com">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Phishtopia">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Phishtopia">
+  <meta name="twitter:description" content="Home of the Improbable.">
+  <meta name="twitter:image" content="https://phishtopia.com/images/phishLogo.png">
+  <meta name="twitter:site" content="@PhishyOne">
+  <meta name="twitter:creator" content="@PhishyOne">
+  <link rel="canonical" href="https://phishtopia.com">
   <title>Phishtopia</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
