--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">StoreCalc Online</a>
-          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Projects Showcase
@@ -66,6 +63,9 @@
               <li><a class="dropdown-item" href="#">Got a Question?</a></li>
             </ul>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">StoreCalc Online</a>
+          </li>
         </ul>
       </div>
 
@@ -77,7 +77,14 @@
     <!-- Hero Section -->
     <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5 mb-5">
       <h1 class="gradient-text">phishtopia v1.0</h1>
-      <p>Home of the improbable.</p>
+      <p>Home of the improbable. Where creativity is shared safely.</p>
+     </section>
+    <!-- Projects Section -->
+    <section class="projects-section orange-bg border-success rounded-3 p-5">
+      <h2>Projects</h2>
+      <p>phishtopia aims to create a peaceful atmosphere where projects and artwork of the underground can be
+        displayed for the world to see. This is a place where finished products can shine.</p>
+      <button class="btn btn-outline-dark gradient-text button">Select</button>
     </section>
     <!-- StoreCalc Online Section -->
     <section class="storecalc-section dark-bg rounded-3 p-5">
@@ -85,13 +92,6 @@
       <p>Coming Soon! StoreCalc helps prisoners total up their commissary items and keep records of their purchases.
       </p>
       <button class="btn btn-outline-light gradient-text button">Don't Click Here</button>
-    </section>
-    <!-- Projects Section -->
-    <section class="projects-section orange-bg border-success rounded-3 p-5">
-      <h2>Projects</h2>
-      <p>phishtopia aims to create a peaceful atmosphere where projects and artwork of the underground can be
-        displayed for the world to see. This is a place where finished products can shine.</p>
-      <button class="btn btn-outline-dark gradient-text button">Select</button>
     </section>
     <!-- Carousel Section -->
     <section class="carousel-section">
