Adjusted text color and hero margin

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <!-- Main Content -->
   <main class="main-grid">
     <!-- Hero Section -->
-    <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5 mb-5">
+    <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5">
       <h1 class="gradient-text">phishtopia v1.0</h1>
       <p>Home of the improbable. Where creativity is shared safely.</p>
      </section>
@@ -84,14 +84,14 @@
       <h2>Projects</h2>
       <p>phishtopia aims to create a peaceful atmosphere where projects and artwork of the underground can be
         displayed for the world to see. This is a place where finished products can shine.</p>
-      <button class="btn btn-outline-dark gradient-text button">Select</button>
+      <button class="btn btn-outline-dark button">Select</button>
     </section>
     <!-- StoreCalc Online Section -->
     <section class="storecalc-section dark-bg rounded-3 p-5">
       <h2>StoreCalc Online (Egg Stage)</h2>
       <p>Coming Soon! StoreCalc helps prisoners total up their commissary items and keep records of their purchases.
       </p>
-      <button class="btn btn-outline-light gradient-text button">Don't Click Here</button>
+      <button class="btn btn-outline-light button">Don't Click Here</button>
     </section>
     <!-- Carousel Section -->
     <section class="carousel-section">
