--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Pompiere&display=swap"
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Shadow&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="./images/phishLogo.png" type="image/png">
   <link rel="apple-touch-icon" sizes="180x180" href="./images/phishLogo.png">
   <link rel="icon" href="./images/phishLogo.png" type="image/png">
@@ -79,6 +80,13 @@
       <h1 class="gradient-text">phishtopia v1.0</h1>
       <p>Home of the improbable. Where creativity is shared safely.</p>
      </section>
+    
+    <!-- Birthday Section -->
+    <section class="birthday-section">
+      <button class="bday-button">Click Me Aunt Joan</button>
+      <img src="./videos/bday.gif" alt="Birthday Card" class="img-fluid rounded-3 bday-video" hidden>
+    </section>
+    
     <!-- Projects Section -->
     <section class="projects-section orange-bg border-success rounded-3 p-5">
       <h2>Projects</h2>
@@ -168,7 +176,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
-    </script>
+  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
