--- a/public/art.html
+++ b/public/art.html
@@ -4,40 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Home of the Improbable.">
+  <meta name="description" content="Art from the underground.">
   <meta name="keywords" content="Phishtopia, projects, artwork, software, engineering, food, community, prison, peace, sharing, showcase">
   <meta name="author" content="PhishyOne">
   <meta name="theme-color" content="#05899E">
   <meta property="og:title" content="Phishtopia - Art">
-  <meta property="og:description" content="Art from the Underground.">
+  <meta property="og:description" content="Art from the underground.">
   <meta property="og:image" content="https://phishtopia.com/images/phishLogo.png">
   <meta property="og:url" content="https://phishtopia.com">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Phishtopia">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Phishtopia - Art">
-  <meta name="twitter:description" content="Art from the Underground.">
+  <meta name="twitter:description" content="Art from the underground.">
   <meta name="twitter:image" content="https://phishtopia.com/images/phishLogo.png">
   <meta name="twitter:site" content="@PhishyOne">
   <meta name="twitter:creator" content="@PhishyOne">
   <link rel="canonical" href="https://phishtopia.com">
-  <title>Phishtopia</title>
+  <title>Phishtopia - Art</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Pompiere&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Londrina+Shadow&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="./images/phishLogo.png" type="image/png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./images/phishLogo.png">
-  <link rel="icon" href="./images/phishLogo.png" type="image/png">
+  <link rel="shortcut icon" href="../images/phishLogo.png" type="image/png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/phishLogo.png">
+  <link rel="icon" href="../images/phishLogo.png" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary gradient-background">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://phishtopia.com"><img src="./images/phishLogo.png" alt="Phishtopia" class="logo"></a>
+      <a class="navbar-brand" href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -48,42 +48,47 @@
               Projects Showcase
             </a>
             <ul class="dropdown-menu gradient-background">
-              <li><a class="dropdown-item" href="./public/software.html">Software</a></li>
-              <li><a class="dropdown-item" href="./public/engineering.html">Mechanical/Electrical Engineering</a></li>
-              <li><a class="dropdown-item" href="./public/art.html">Artwork</a></li>
-              <li><a class="dropdown-item" href=".public/food.html">Food</a></li>
+              <li><a class="dropdown-item" href="software.html">Software</a></li>
+              <li><a class="dropdown-item" href="engineering.html">Mechanical/Electrical Engineering</a></li>
+              <li><a class="dropdown-item" href="art.html">Artwork</a></li>
+              <li><a class="dropdown-item" href="food.html">Food</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="./public/contact.html">Got a Question?</a></li>
+              <li><a class="dropdown-item" href="contact.html">Got a Question?</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/storecalc.html">StoreCalc Online</a>
+            <a class="nav-link active" aria-current="page" href="storecalc.html">StoreCalc Online</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
+  <!-- Main Content -->
+  <main class="main-grid">
+    <!-- Hero Section -->
+    <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5">
+      <h1 class="gradient-text"></h1>
+      <p></p>
+    </section>
+  </main>
+
   <!-- Footer -->
-  <section id="footer">
-    <div class="gradient-background justify-content-center">
-      <footer class="py-3 text-center">
-        <ul class="nav justify-content-center mb-2 footer-links">
-          <li class="nav-item"><a href="https://phishtopia.com" class="nav-link px-4 text-body-secondary">Home</a></li>
-          <li class="nav-item"><a href="https://phishyone.github.io/Fullstack-Course/" class="nav-link px-4">My Course Progress</a></li>
-          <li class="nav-item"><a href="https://phishtopia.com/public/contact.html" class="nav-link px-4">Contact Me</a></li>
-        </ul>
-        <a href="https://phishtopia.com"><img src="./images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
-        <a href="https://phishtopia.com">
-          <p class="gradient-text text-center">©2025 Phishtopia</p>
-        </a>
-      </footer>
+  <div class="footer gradient-background">
+    <div class="footer-links">
+      <p><a href="https://phishtopia.com">Home</a></p>
+      <p><a href="https://phishyone.github.io/Fullstack-Course/">My Course Progress</a></p>
+      <p><a href="contact.html">Contact Me</a></p>
     </div>
-  </section>
+    <a href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
+    <a href="https://phishtopia.com">
+      <p id="copyright" class="gradient-text">©2025 Phishtopia</p>
+    </a>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="./js/script.js"></script>
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
