Made basic pages with template

--- a/public/art.html
+++ b/public/art.html
@@ -68,8 +68,8 @@
   <main class="main-grid">
     <!-- Hero Section -->
     <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5">
-      <h1 class="gradient-text"></h1>
-      <p></p>
+      <h1 class="gradient-text">Art Exhibit</h1>
+      <p>Coming Soon</p>
     </section>
   </main>
 
