--- a/public/contact.html
+++ b/public/contact.html
@@ -86,31 +86,22 @@
     </main>
 
     <!-- Footer -->
-    <section id="footer">
-        <div class="gradient-background justify-content-center">
-            <footer class="py-3 text-center">
-                <ul class="nav justify-content-center mb-2 footer-links">
-                    <li class="nav-item"><a href="https://phishtopia.com"
-                            class="nav-link px-4 text-body-secondary">Home</a></li>
-                    <li class="nav-item"><a href="https://phishyone.github.io/Fullstack-Course/"
-                            class="nav-link px-4">My Course Progress</a></li>
-                    <li class="nav-item"><a href="https://phishtopia.com/public/contact.html"
-                            class="nav-link px-4">Contact Me</a></li>
-                </ul>
-                <a href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia"
-                        class="logo mb-2" /></a>
-                <a href="https://phishtopia.com">
-                    <p class="gradient-text text-center">©2025 Phishtopia</p>
-                </a>
-            </footer>
+    <div class="footer gradient-background">
+        <div class="footer-links">
+            <p><a href="https://phishtopia.com">Home</a></p>
+            <p><a href="https://phishyone.github.io/Fullstack-Course/">My Course Progress</a></p>
+            <p><a href="contact.html">Contact Me</a></p>
         </div>
-    </section>
-
+        <a href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
+        <a href="https://phishtopia.com">
+            <p id="copyright" class="gradient-text">©2025 Phishtopia</p>
+        </a>
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="./js/script.js"></script>
-</body>
-
+    <script src="../js/script.js"></script>
+    </body>
 </html>
