--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
               Projects Showcase
             </a>
             <ul class="dropdown-menu gradient-background">
-              <li><a class="dropdown-item" href="#">Software</a></li>
-              <li><a class="dropdown-item" href="#">Mechanical/Electrical Engineering</a></li>
-              <li><a class="dropdown-item" href="#">Artwork</a></li>
-              <li><a class="dropdown-item" href="#">Food</a></li>
+              <li><a class="dropdown-item" href="public/software.html">Software</a></li>
+              <li><a class="dropdown-item" href="public/engineering.html">Mechanical/Electrical Engineering</a></li>
+              <li><a class="dropdown-item" href="public/art.html">Artwork</a></li>
+              <li><a class="dropdown-item" href="public/food.html">Food</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">Got a Question?</a></li>
+              <li><a class="dropdown-item" href="public/contact.html">Got a Question?</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">StoreCalc Online</a>
+            <a class="nav-link active" aria-current="page" href="public/storecalc.html">StoreCalc Online</a>
           </li>
         </ul>
       </div>
@@ -153,7 +153,7 @@
     <div class="footer-links">
       <p><a href="https://phishtopia.com">Home</a></p>
       <p><a href="https://phishyone.github.io/Fullstack-Course/">My Course Progress</a></p>
-      <p><a href="contact.html">Contact Me</a></p>
+      <p><a href="public/contact.html">Contact Me</a></p>
     </div>
     <a href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
     <a href="https://phishtopia.com">
@@ -164,6 +164,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="../js/script.js"></script>
+  <script src="./js/script.js"></script>
   </body>
 </html>
