--- a/public/projects.html
+++ b/public/projects.html
@@ -4,24 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Art from the underground.">
+  <meta name="description" content="Projects Overview">
   <meta name="keywords" content="Phishtopia, projects, artwork, software, engineering, food, community, prison, peace, sharing, showcase">
   <meta name="author" content="PhishyOne">
   <meta name="theme-color" content="#05899E">
-  <meta property="og:title" content="Phishtopia - Art">
-  <meta property="og:description" content="Art from the underground.">
+  <meta property="og:title" content="Phishtopia - Projects">
+  <meta property="og:description" content="Projects Overview">
   <meta property="og:image" content="https://phishtopia.com/images/phishLogo.png">
   <meta property="og:url" content="https://phishtopia.com">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Phishtopia">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Phishtopia - Art">
-  <meta name="twitter:description" content="Art from the underground.">
+  <meta name="twitter:title" content="Phishtopia - Projects">
+  <meta name="twitter:description" content="Projects Overview">
   <meta name="twitter:image" content="https://phishtopia.com/images/phishLogo.png">
   <meta name="twitter:site" content="@PhishyOne">
   <meta name="twitter:creator" content="@PhishyOne">
   <link rel="canonical" href="https://phishtopia.com">
-  <title>Phishtopia - Art</title>
+  <title>Phishtopia - Projects</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Pompiere&display=swap" rel="stylesheet">
@@ -48,16 +48,16 @@
               Projects Showcase
             </a>
             <ul class="dropdown-menu gradient-background">
-              <li><a class="dropdown-item" href="./software.html">Software</a></li>
-              <li><a class="dropdown-item" href="./engineering.html">Mechanical/Electrical Engineering</a></li>
-              <li><a class="dropdown-item" href="./art.html">Artwork</a></li>
+              <li><a class="dropdown-item" href="software.html">Software</a></li>
+              <li><a class="dropdown-item" href="engineering.html">Mechanical/Electrical Engineering</a></li>
+              <li><a class="dropdown-item" href="art.html">Artwork</a></li>
               <li><a class="dropdown-item" href="food.html">Food</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="./contact.html">Got a Question?</a></li>
+              <li><a class="dropdown-item" href="contact.html">Got a Question?</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./storecalc.html">StoreCalc Online</a>
+            <a class="nav-link active" aria-current="page" href="storecalc.html">StoreCalc Online</a>
           </li>
         </ul>
       </div>
@@ -68,7 +68,7 @@
   <main class="main-grid">
     <!-- Hero Section -->
     <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5">
-      <h1 class="gradient-text">Art Exhibit</h1>
+      <h1 class="gradient-text">Projects Home</h1>
       <p>Coming Soon</p>
     </section>
   </main>
@@ -78,7 +78,7 @@
     <div class="footer-links">
       <p><a href="https://phishtopia.com">Home</a></p>
       <p><a href="https://phishyone.github.io/Fullstack-Course/">My Course Progress</a></p>
-      <p><a href="./contact.html">Contact Me</a></p>
+      <p><a href="contact.html">Contact Me</a></p>
     </div>
     <a href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
     <a href="https://phishtopia.com">
@@ -88,7 +88,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="../js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
