--- a/public/art.html
+++ b/public/art.html
@@ -51,7 +51,7 @@
               <li><a class="dropdown-item" href="./software.html">Software</a></li>
               <li><a class="dropdown-item" href="./engineering.html">Mechanical/Electrical Engineering</a></li>
               <li><a class="dropdown-item" href="./art.html">Artwork</a></li>
-              <li><a class="dropdown-item" href="food.html">Food</a></li>
+              <li><a class="dropdown-item" href="./food.html">Food</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="./contact.html">Got a Question?</a></li>
             </ul>
