--- a/public/contact.html
+++ b/public/contact.html
@@ -56,19 +56,18 @@
                             Projects Showcase
                         </a>
                         <ul class="dropdown-menu gradient-background">
-                            <li><a class="dropdown-item" href="software.html">Software</a></li>
-                            <li><a class="dropdown-item" href="engineering.html">Mechanical/Electrical Engineering</a>
-                            </li>
-                            <li><a class="dropdown-item" href="art.html">Artwork</a></li>
-                            <li><a class="dropdown-item" href="food.html">Food</a></li>
+                            <li><a class="dropdown-item" href="./software.html">Software</a></li>
+                            <li><a class="dropdown-item" href="./engineering.html">Mechanical/Electrical Engineering</a></li>
+                            <li><a class="dropdown-item" href="./art.html">Artwork</a></li>
+                            <li><a class="dropdown-item" href="./food.html">Food</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="contact.html">Got a Question?</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/storecalc.html">StoreCalc Online</a>
+                            <li><a class="dropdown-item" href="./contact.html">Got a Question?</a></li>
+                            </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./storecalc.html">StoreCalc Online</a>
                     </li>
                 </ul>
             </div>
@@ -85,23 +84,3 @@
         </section>
     </main>
 
-    <!-- Footer -->
-    <div class="footer gradient-background">
-        <div class="footer-links">
-            <p><a href="https://phishtopia.com">Home</a></p>
-            <p><a href="https://phishyone.github.io/Fullstack-Course/">My Course Progress</a></p>
-            <p><a href="contact.html">Contact Me</a></p>
-        </div>
-        <a href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
-        <a href="https://phishtopia.com">
-            <p id="copyright" class="gradient-text">©2025 Phishtopia</p>
-        </a>
-    </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="../js/script.js"></script>
-    </body>
-</html>
