--- a/public/projects.html
+++ b/public/projects.html
@@ -34,36 +34,36 @@
 </head>
 
 <body>
-  <!-- Nav Bar -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary gradient-background">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Projects Showcase
-            </a>
-            <ul class="dropdown-menu gradient-background">
-              <li><a class="dropdown-item" href="software.html">Software</a></li>
-              <li><a class="dropdown-item" href="engineering.html">Mechanical/Electrical Engineering</a></li>
-              <li><a class="dropdown-item" href="art.html">Artwork</a></li>
-              <li><a class="dropdown-item" href="food.html">Food</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="contact.html">Got a Question?</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="storecalc.html">StoreCalc Online</a>
-          </li>
-        </ul>
+    <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary gradient-background">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Projects Showcase
+              </a>
+              <ul class="dropdown-menu gradient-background">
+                <li><a class="dropdown-item" href="./software.html">Software</a></li>
+                <li><a class="dropdown-item" href="./engineering.html">Mechanical/Electrical Engineering</a></li>
+                <li><a class="dropdown-item" href="./art.html">Artwork</a></li>
+                <li><a class="dropdown-item" href="./food.html">Food</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="./contact.html">Got a Question?</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./storecalc.html">StoreCalc Online</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-
+    </nav>
+    
   <!-- Main Content -->
   <main class="main-grid">
     <!-- Hero Section -->
