--- a/public/software.html
+++ b/public/software.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Phishtopia, projects, artwork, software, engineering, food, community, prison, peace, sharing, showcase">
   <meta name="author" content="PhishyOne">
   <meta name="theme-color" content="#05899E">
-  <meta property="og:title" content="Phishtopia - Software
+  <meta property="og:title" content="Phishtopia - Software">
   <meta property="og:description" content="Software Made Behind Bars">
   <meta property="og:image" content="https://phishtopia.com/images/phishLogo.png">
   <meta property="og:url" content="https://phishtopia.com">
@@ -34,35 +34,35 @@
 </head>
 
 <body>
-  <!-- Nav Bar -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary gradient-background">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Projects Showcase
-            </a>
-            <ul class="dropdown-menu gradient-background">
-              <li><a class="dropdown-item" href="software.html">Software</a></li>
-              <li><a class="dropdown-item" href="engineering.html">Mechanical/Electrical Engineering</a></li>
-              <li><a class="dropdown-item" href="art.html">Artwork</a></li>
-              <li><a class="dropdown-item" href="food.html">Food</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="contact.html">Got a Question?</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="storecalc.html">StoreCalc Online</a>
-          </li>
-        </ul>
+    <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary gradient-background">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Projects Showcase
+              </a>
+              <ul class="dropdown-menu gradient-background">
+                <li><a class="dropdown-item" href="./software.html">Software</a></li>
+                <li><a class="dropdown-item" href="./engineering.html">Mechanical/Electrical Engineering</a></li>
+                <li><a class="dropdown-item" href="./art.html">Artwork</a></li>
+                <li><a class="dropdown-item" href="./food.html">Food</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="./contact.html">Got a Question?</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./storecalc.html">StoreCalc Online</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
   <!-- Main Content -->
   <main class="main-grid">
@@ -73,22 +73,22 @@
     </section>
   </main>
 
-  <!-- Footer -->
-  <div class="footer gradient-background">
-    <div class="footer-links">
-      <p><a href="https://phishtopia.com">Home</a></p>
-      <p><a href="https://phishyone.github.io/Fullstack-Course/">My Course Progress</a></p>
-      <p><a href="contact.html">Contact Me</a></p>
+    <!-- Footer -->
+    <div class="footer gradient-background">
+      <div class="footer-links">
+        <p><a href="https://phishtopia.com">Home</a></p>
+        <p><a href="https://phishyone.github.io/Fullstack-Course/">My Course Progress</a></p>
+        <p><a href="./contact.html">Contact Me</a></p>
+      </div>
+      <a href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
+      <a href="https://phishtopia.com">
+        <p id="copyright" class="gradient-text">©2025 Phishtopia</p>
+      </a>
     </div>
-    <a href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
-    <a href="https://phishtopia.com">
-      <p id="copyright" class="gradient-text">©2025 Phishtopia</p>
-    </a>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="./js/script.js"></script>
-</body>
-
-</html>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="../js/script.js"></script>
+  </body>
+  
+  </html>
