--- a/public/contact.html
+++ b/public/contact.html
@@ -84,3 +84,22 @@
         </section>
     </main>
 
+  <!-- Footer -->
+  <div class="footer gradient-background">
+    <div class="footer-links">
+      <p><a href="https://phishtopia.com">Home</a></p>
+      <p><a href="https://phishyone.github.io/Fullstack-Course/">My Course Progress</a></p>
+      <p><a href="./contact.html">Contact Me</a></p>
+    </div>
+    <a href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
+    <a href="https://phishtopia.com">
+      <p id="copyright" class="gradient-text">©2025 Phishtopia</p>
+    </a>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="../js/script.js"></script>
+</body>
+
+</html>
