--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
       <h2>Projects</h2>
       <p>phishtopia aims to create a peaceful atmosphere where projects and artwork of the underground can be
         displayed for the world to see. This is a place where finished products can shine.</p>
-      <button class="btn btn-outline-dark button">Select</button>
+      <a href="public/projects.html" class="btn btn-outline-dark button">View Projects</a>
     </section>
     <!-- StoreCalc Online Section -->
     <section class="storecalc-section dark-bg rounded-3 p-5">
       <h2>StoreCalc Online (Egg Stage)</h2>
       <p>Coming Soon! StoreCalc helps prisoners total up their commissary items and keep records of their purchases.
       </p>
-      <button class="btn btn-outline-light button">Don't Click Here</button>
+      <a href="public/storecalc.html" class="btn btn-outline-light button">StoreCalc Online</a>
     </section>
     <!-- Carousel Section -->
     <section class="carousel-section">
