--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
       <p>Home of the improbable. Where creativity is shared safely.</p>
      </section>
     
+     <section class="birthday-section rounded-3 p-5">
+      <h2>Happy Birthdaaaaaayyyyyyyy!!!</h2>
+      <button id="play-video">Click Me Birthday Girl!</button>
+      <video id="ash-birthday">
+        <source src="./videos/ash-birthday.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+     </section>
+     
     <!-- Projects Section -->
     <section class="projects-section orange-bg border-success rounded-3 p-5">
       <h2>Projects</h2>
