Added Simon to Software

--- a/public/software.html
+++ b/public/software.html
@@ -69,7 +69,10 @@
     <!-- Hero Section -->
     <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5">
       <h1 class="gradient-text">Software Showcase</h1>
-      <p>Coming Soon</p>
+      <p>Click a link below</p>
+    </section>
+    <section class="hero-section gradient-background rounded-3 pt-2 pb-1 ps-5">
+      <a href="./software/simon.html"><h3>Simon</h3></a>
     </section>
   </main>
 
