--- a/public/software/simon.html
+++ b/public/software/simon.html
@@ -83,31 +83,26 @@
             <h1 class="gradient-text">Simon</h1>
             <p>Challenge yourself to press the buttons in the order they were activated. Good luck!</p>
         </section>
-    </main>
 
-    <div class="simon">
-        <h2 id="level-title">Press Start</h2>
-        <div class="container">
-            <button class="start-button" role="button">Start</button>
-            <div class="row">
-                <div type="button" id="green" class="simon-btn green"></div>
-                <div type="button" id="red" class="simon-btn red"></div>
+        <div class="simon">
+            <h2 class="span-2" id="level-title">Press Start</h2>
+            <div class="span-2">
+                <button class="start-button" role="button">Start</button>
             </div>
-            <div class="row">
-                <div type="button" id="yellow" class="simon-btn yellow"></div>
-                <div type="button" id="blue" class="simon-btn blue"></div>
-            </div>
+                    <div type="button" id="green" class="simon-btn green"></div>
+                    <div type="button" id="red" class="simon-btn red"></div>
+                    <div type="button" id="yellow" class="simon-btn yellow"></div>
+                    <div type="button" id="blue" class="simon-btn blue"></div>
         </div>
-    </div>
-
+    </main>
     <!-- Footer -->
     <div class="footer gradient-background">
         <div class="footer-links">
             <p><a href="https://phishtopia.com">Home</a></p>
             <p><a href="https://phishyone.github.io/Fullstack-Course/">My Course Progress</a></p>
-            <p><a href="./contact.html">Contact Me</a></p>
+            <p><a href="/public/contact.html">Contact Me</a></p>
         </div>
-        <a href="https://phishtopia.com"><img src="../images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
+        <a href="https://phishtopia.com"><img src="/images/phishLogo.png" alt="Phishtopia" class="logo mb-2" /></a>
         <a href="https://phishtopia.com">
             <p id="copyright" class="gradient-text">©2025 Phishtopia</p>
         </a>
