Tuning Simon Layou

--- a/public/software/simon.html
+++ b/public/software/simon.html
@@ -84,7 +84,7 @@
             <p>Challenge yourself to press the buttons in the order they were activated. Good luck!</p>
         </section>
 
-        <div class="simon">
+        <div class="simon span-2">
             <h2 class="span-2" id="level-title">Press Start</h2>
             <div class="span-2">
                 <button class="start-button" role="button">Start</button>
