Added Projects page, updated soffware page for simon

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
      </section>
      
     <!-- Projects Section -->
-    <section class="projects-section orange-bg border-success rounded-3 p-5">
+    <section class="projects-section">
       <h2>Projects</h2>
       <p>phishtopia aims to create a peaceful atmosphere where projects and artwork of the underground can be
         displayed for the world to see. This is a place where finished products can shine.</p>
       <a href="public/projects.html" class="btn btn-outline-dark button">View Projects</a>
     </section>
     <!-- StoreCalc Online Section -->
-    <section class="storecalc-section dark-bg rounded-3 p-5">
+    <section class="storecalc-section dark-bg">
       <h2>StoreCalc Online (Egg Stage)</h2>
       <p>Coming Soon! StoreCalc helps prisoners total up their commissary items and keep records of their purchases.
       </p>
