--- a/public/projects.html
+++ b/public/projects.html
@@ -68,9 +68,31 @@
   <main class="main-grid">
     <!-- Hero Section -->
     <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5">
-      <h1 class="gradient-text">Projects Home</h1>
-      <p>Coming Soon</p>
+      <h1 class="gradient-text">Project Categories</h1>
     </section>
+    <!-- Projects Sections -->
+    <div class="projects-grid">
+      <!-- This Just In Section -->
+      <section class="projects-section just-in-section">
+        <h2>This Just In:</h2>
+        <ul>
+          <li><a href="./software/simon.html"><h3>"Simon"</h3></a></li>
+        </ul>
+      </section>
+      <!-- Project Categories -->
+      <section class="projects-section projects-list-section">
+        <a href="./software.html"><h2>Software</h2></a>
+      </section>
+      <section class="projects-section projects-list-section">
+        <a href="./art.html"><h2>Art</h2></a>
+      </section>
+      <section class="projects-section projects-list-section">
+        <a href="./food.html"><h2>Food</h2></a>
+      </section>
+      <section class="projects-section projects-list-section">
+        <a href="./engineering.html"><h2>Engineering</h2></a>
+      </section>
+    </div>
   </main>
 
   <!-- Footer -->
@@ -88,7 +110,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="./js/script.js"></script>
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
