Make Moving Bubbles

--- a/canvas/index.html
+++ b/canvas/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas Resize</title>
+    <title>Canvas Sandbox</title>
     <style type="text/css">
         canvas {
             border: 1px solid black;
-            background: rgb(22, 159, 168);
+            background: rgba(146, 233, 240, 1);
         }
         body, html {
             margin: 0;
